get user input for email address

--- a/Spam_Ham_With_Explaination.ipynb
+++ b/Spam_Ham_With_Explaination.ipynb
@@ -1,37 +1,11 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "Python 3.8.5 64-bit",
-   "display_name": "Python 3.8.5 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "e2ebc9618fb5f5407b11492d3d8b4a02d39e77fbbc3b477930cec636582b7fc5"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Let's start by opening the MailSpamCollection file with the read_csv() function from the pandas package."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -57,13 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We're now going to split our dataset into a training set and a test set. We'll use 80% of the data for training and the remaining 20% for testing.\n",
     "  \n",
     "We'll randomize the entire dataset before splitting to ensure that spam and ham messages are spread properly throughout the dataset."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -104,11 +78,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Let's begin the data cleaning process by removing the punctuation and making all the words lowercase."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -133,11 +107,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Let's now create the vocabulary, which in this context means a list with all the unique words in our training set."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -165,11 +139,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Creating clean training data set.\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -205,11 +179,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Calculating Constants First"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -241,11 +215,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Calculating Parameters"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -269,11 +243,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Creating a function to Classifying A New Message"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -328,11 +302,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Measuring the Spam Filter's Accuracy"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -393,11 +367,15 @@
    ]
   },
   {
-   "source": [
-    "Fetching Mails from user inbox."
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "Fetching Mails from user inbox.\n",
+    "\n",
+    "Note:\n",
+    "1. enable imap in your account\n",
+    "2. change server if required (current: gmail)"
+   ]
   },
   {
    "cell_type": "code",
@@ -410,8 +388,9 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "mail_bodies = []\n",
-    "password = getpass.getpass(\"Enter the password for your email: \")\n",
-    "server = e.connect(\"imap.gmail.com\",\"your email\",password)\n",
+    "email = input(\"Enter email address:\")\n",
+    "password = getpass.getpass(\"Enter the password: \")   \n",
+    "server = e.connect(\"imap.gmail.com\",email,password)\n",
     "for i in range(0,len(server.listids())):\n",
     "    email = server.mail(server.listids()[i])\n",
     "    cleantext = BeautifulSoup(email.body, \"lxml\").text\n",
@@ -420,11 +399,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Classifing each mail into Spam/Ham"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -441,5 +420,31 @@
     "    print(\"<------------------------------------------------END------------------------------------------------>\\n\")"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "e2ebc9618fb5f5407b11492d3d8b4a02d39e77fbbc3b477930cec636582b7fc5"
+    }
+   },
+   "name": "Python 3.8.5 64-bit"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5-final"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
