--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "mail_spam = pd.read_csv('dataset2', sep='\\t',header=None, names=['Label', 'MAIL'])\n",
+    "mail_spam = pd.read_csv('dataset_2', sep='\\t',header=None, names=['Label', 'MAIL'])\n",
     "\n",
     "print(mail_spam.shape)\n",
     "mail_spam.head()"
